Carmachine: add access to easyConnect application.
Change-Id: I715fb87b85c589305fb188f2639b828b4fda0247
Signed-off-by: kevin.chen <kevin.chen@rock-chips.com>

--- a/res_main.qrc
+++ b/res_main.qrc
@@ -21,5 +21,11 @@
         <file>image/main/icon_setting.png</file>
         <file>image/main/icon_gallery.png</file>
         <file>image/main/return_big.png</file>
+        <file>image/main/hour_pointer.png</file>
+        <file>image/main/icon_easy_connect.png</file>
+        <file>image/main/icon_radio.png</file>
+        <file>image/main/mini_pointer.png</file>
+        <file>image/main/sec_pointer.png</file>
+        <file>image/main/loading.gif</file>
     </qresource>
 </RCC>
