Carmachine: add access to carplay application.
Change-Id: If7b3b5d6ed41b1efd2c98496c77cd717dd93152f
Signed-off-by: kevin.chen <kevin.chen@rock-chips.com>

--- a/res_main.qrc
+++ b/res_main.qrc
@@ -27,5 +27,6 @@
         <file>image/main/mini_pointer.png</file>
         <file>image/main/sec_pointer.png</file>
         <file>image/main/loading.gif</file>
+        <file>image/main/icon_carplay.png</file>
     </qresource>
 </RCC>
