fix px3se camera kmssink preview error.
Change-Id: I41231d9dc98e3688670d596fd38a40236d594080
Signed-off-by: chenxiao <cx@rock-chips.com>

--- a/qml.qrc
+++ b/qml.qrc
@@ -2,5 +2,6 @@
     <qresource prefix="/">
         <file>video.qml</file>
         <file>video3399.qml</file>
+        <file>camera.qml</file>
     </qresource>
 </RCC>
