--- a/qml.qrc
+++ b/qml.qrc
@@ -3,5 +3,6 @@
         <file>video.qml</file>
         <file>video3399.qml</file>
         <file>camera.qml</file>
+        <file>camera_px3se.qml</file>
     </qresource>
 </RCC>
